--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 
 <h1>Limely's website! Under Construction</h1>
+<h2> Thank you for your patience :3</h2>
 
 <p> Thanks Jennifer ツ#6205 for helping with the website</p>
 
