--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <p> Thanks Jennifer ツ#6205 for helping with the website</p>
 
-<p> Why not CHeck out my youtube channel while you wait!</p>
+<p> Why not Check out my youtube channel while you wait!</p>
 
 <button onclick="window.open('www.limely.xyz/youtube','_blank')">Youtube</button>
 
