--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <p> Why not Check out my youtube channel while you wait!</p>
 
-<button onclick="window.open('www.limely.xyz/youtube','_blank')">Youtube</button>
+<button onclick="window.open('https://www.youtube.com/channel/UCfRYHACqVm6x31lIl0ctiNg','_blank')">Youtube</button>
 
 </body>
 </html>
