--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <body>
 
 <h1>Limely's website! Under Construction</h1>
+<h2>There is no ETA for the Website at the moment sorry</h2>
 <h2> Thank you for your patience :3</h2>
 
 
-<p> Why not Check out my youtube channel while you wait!</p>
+<p>Why not Check out my youtube channel while you wait!</p>
 
 <button onclick="window.open('https://www.youtube.com/channel/UCfRYHACqVm6x31lIl0ctiNg','_blank')">Youtube</button>
 
 
-<p> Thanks Jennifer ツ#6205 for helping with the website</p>
+<p> Thanks Jennifer ツ#6205 for helping with the website </p>
  
 
 
